monolithic-objects/src/main/java/com/ttulka/blog/samples/good/product/ListAllProducts.java
package com.ttulka.blog.samples.good.product;

import java.util.Collection;

public interface ListAllProducts {

    Collection<Product> list();
}
